--- a/jenkins-x-chaos.yml
+++ b/jenkins-x-chaos.yml
@@ -14,6 +14,10 @@ pipelineConfig:
             environment:
               - name: BASE_WORKSPACE
                 value: /workspace/source
+              - name: NODE_SIZE
+                value: 4
+              - name: CHAIN_GENESIS_TIMEOUT_GAP
+                value: 9999
             options:
               containerOptions:
                 volumeMounts:
@@ -55,7 +59,7 @@ pipelineConfig:
                 command: /kaniko/executor
                 args:
                   - --dockerfile=/workspace/source/devtools/docker-build/Dockerfile
-                  - --destination=mutadev/${REPO_NAME}:${BRANCH_NAME}
+                  - --destination=mutadev/${REPO_NAME}:${BRANCH_NAME}-${BUILD_NUMBER}
                   - --context=/workspace/source
 
               - name: create-chaos-crd
@@ -63,18 +67,22 @@ pipelineConfig:
                 command: helm
                 args:
                   - install
-                  - chaos-${REPO_NAME}-${BRANCH_NAME}
+                  - chaos-${REPO_NAME}-${BRANCH_NAME}-${BUILD_NUMBER}
                   - charts/deploy-chaos
                   - --namespace
                   - mutadev
                   - --set
-                  - size=8,repo_name=${REPO_NAME},BRANCH_NAME=${BRANCH_NAME},resources.cpu=1100m,resources.memory=8Gi
+                  - size=4,repo_name=${REPO_NAME},version=${BRANCH_NAME}-${BUILD_NUMBER},resources.cpu=1100m,resources.memory=8Gi
+              - name: run-benchmark
+                image: node:alpine3.12
+                command:
+
               - name: delete-chaos-crd
                 image: alpine/helm:3.2.4
                 command: helm
                 args:
                   - uninstall
-                  - chaos-${REPO_NAME}-${BRANCH_NAME}
+                  - chaos-${REPO_NAME}-${BRANCH_NAME}-${BUILD_NUMBER}
                   - --namespace
                   - mutadev
 
