--- a/jenkins-x-chaos.yml
+++ b/jenkins-x-chaos.yml
@@ -73,12 +73,29 @@ pipelineConfig:
                   - mutadev
                   - --set
                   - size=${NODE_SIZE},repo_name=${REPO_NAME},version=pr-${PULL_NUMBER}-${BUILD_NUMBER},resources.cpu=1100m,resources.memory=8Gi,chain_genesis.metadata.timeout_gap=${CHAIN_GENESIS_TIMEOUT_GAP}
-              # - name: run-benchmark
-              #   image: mutadev/benchmark:v0.1.0
-              #   command: node
-              #   args:
-              #     - index.js
-              #     - 
+
+              - name: chaos-watchdog
+                image: mutadev/chaos-watchdog:v0.1.0
+                env:
+                  - name: WATCH_DURATION
+                    value: 4H
+                  - name: APP_NAMESPACE
+                    value: mutadev
+                  - name: APP_NAME
+                    value: chaos-${REPO_NAME}-pr-${PULL_NUMBER}-${BUILD_NUMBER}
+                  - name: APP_PORT
+                    value: "8000"
+                  - name: APP_GRAPHQL_URL
+                    value: graphql
+                  - name: JOB_BENCHMARK_DURATION
+                    value: "300"
+                  - name: JOB_BENCHMARK_TIMEOUT_GAP
+                    value: "9999"
+                  - name: JOB_BENCHMARK_CPU
+                    value: "3"
+                command: npm
+                args:
+                  - start
 
               - name: delete-chaos-crd
                 image: alpine/helm:3.2.4
