chore(network): turn off global_ip_only feature by default

--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -39,7 +39,7 @@ quickcheck_macros = "0.8"
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [features]
-default = ["global_ip_only"]
+default = []
 global_ip_only = []
 diagnostic = []
 
