--- a/charts/deploy-chaos/values.yaml
+++ b/charts/deploy-chaos/values.yaml
@@ -8,9 +8,9 @@ repo_name: muta
 version: latest
 
 resources:
-  cpu: 1100m
-  memory: 3Gi
-  storage: 5Gi
+  cpu: 1Gi
+  memory: 4Gi
+  storage: 6Gi
   persistent: false
 
 chaos: 
