--- a/devtools/keypair/Cargo.toml
+++ b/devtools/keypair/Cargo.toml
@@ -13,10 +13,10 @@ description = "A tool to generate keypairs for muta framework"
 [dependencies]
 clap = { version = "2.33", features = ["yaml"] }
 hex = "0.4"
-ophelia-bls-amcl = "0.1"
-ophelia-secp256k1 = "0.2"
-ophelia = "0.2"
-protocol = { version = "0.1.0-alpha.1", package = "muta-protocol" }
+ophelia-bls-amcl = "0.3"
+ophelia-secp256k1 = "0.3"
+ophelia = "0.3"
+protocol = { path = "../../protocol", package = "muta-protocol" }
 rand = "0.7"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
