--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -33,3 +33,7 @@ ophelia-secp256k1 = "0.3"
 [dev-dependencies]
 rayon = "1.3"
 rand = "0.6"
+
+[build-dependencies]
+hasher = { version = "0.1", features = ['hash-keccak'] }
+bech32 = "0.7"
