--- a/charts/deploy-chaos/templates/muta-chaos-crd.yaml
+++ b/charts/deploy-chaos/templates/muta-chaos-crd.yaml
@@ -21,7 +21,7 @@ spec:
   size: {{ .Values.size }} # Node numbers
   persistent: {{ .Values.resources.persistent }} # Persistent data
   config: # see https://github.com/nervosnetwork/muta/blob/master/devtools/chain/config.toml
-    data_path: "/app/data"
+    data_path: "/muta-data"
     graphql:
       listening_address: "0.0.0.0:8000"
       graphql_uri: "/graphql"
@@ -41,7 +41,7 @@ spec:
       filter: "info"
       log_to_console: true
       console_show_file_and_line: false
-      log_path: "logs/"
+      log_path: "/muta-data/logs/"
       log_to_file: true
       metrics: true
       modules_level:
