--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -27,6 +27,8 @@ cita_trie = "2.0"
 json = "0.12"
 byteorder = "1.3"
 muta-codec-derive = "0.2"
+ophelia = "0.3"
+ophelia-secp256k1 = "0.3"
 
 [dev-dependencies]
 rayon = "1.3"
