--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -25,13 +25,12 @@ rand = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
-tentacle-ping = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
-tentacle-discovery = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
-tentacle-identify = { git = "https://github.com/zeroqn/p2p", branch = "v0.3.0.alpha5-muta", features = [ "molc" ]}
+tentacle = { version = "0.3.0-alpha.5", features = ["molc"]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
+tokio-util = { version = "0.2", features = ["codec"] }
 hostname = "0.3"
 lazy_static = "1.4"
+bs58 = "0.3"
 
 [dev-dependencies]
 env_logger = "0.6"
@@ -40,10 +39,10 @@ quickcheck_macros = "0.8"
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 
 [features]
-allow_global_ip = []
+default = []
+global_ip_only = []
 diagnostic = []
 
 [[test]]
 name = "broadcast"
 path = "tests/gossip_test.rs"
-required-features = [ "allow_global_ip" ]
