--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -30,11 +30,8 @@ muta-codec-derive = "0.2"
 ophelia = "0.3"
 ophelia-secp256k1 = "0.3"
 bech32 = "0.7"
+arc-swap = "0.4"
 
 [dev-dependencies]
 rayon = "1.3"
 rand = "0.6"
-
-[build-dependencies]
-hasher = { version = "0.1", features = ['hash-keccak'] }
-bech32 = "0.7"
