--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -43,6 +43,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 default = []
 global_ip_only = []
 diagnostic = []
+disable_chain_id_check = []
 
 [[test]]
 name = "broadcast"
