--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -28,11 +28,14 @@ hex = "0.4"
 serde_json = "1.0"
 log = "0.4"
 rayon = "1.3"
+lru-cache = "0.1"
+lru = "0.6"
+parking_lot = "0.11"
+rand = { version = "0.7", features = ["small_rng"]}
 
 [dev-dependencies]
 async-trait = "0.1"
 toml = "0.5"
 binding-macro = { path = "../binding-macro" }
-rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 muta-codec-derive = "0.2"
