--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -20,8 +20,9 @@ futures = "0.3"
 derive_more = "0.15"
 cita_trie = "2.0"
 bytes = "0.5"
-actix-web = "2.0"
+actix-web = { version = "2.0.0", features = ["openssl"] }
 serde_json = "1.0"
 lazy_static = "1.4"
 num_cpus = "1.12"
 log = "0.4"
+openssl = "0.10"
