--- a/common/pubsub/Cargo.toml
+++ b/common/pubsub/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-pubsub"
-version = "0.1.0-alpha.0"
+aversion = "0.2.0-beta3"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
