--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -42,8 +42,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 [features]
 default = []
 global_ip_only = []
-disable_chain_id_check = []
-diagnostic = ["disable_chain_id_check"]
+diagnostic = []
 
 [[test]]
 name = "broadcast"
