--- a/charts/deploy-chaos/templates/muta-benchmark.yaml
+++ b/charts/deploy-chaos/templates/muta-benchmark.yaml
@@ -5,7 +5,7 @@ metadata:
   name: benchmark-{{ .Values.repo_name }}-{{ .Values.version }}
   namespace: {{ .Values.namespace }} # Only supports deployment to the mutadev namespace
 spec:
-  schedule: {{ .Values.benchmark.schedule | toJson | quote }}
+  schedule: {{ .Values.benchmark.schedule | quote }}
   jobTemplate:
     spec:
       template:
@@ -15,7 +15,7 @@ spec:
             image: {{ .Values.benchmark.image }}
             args:
             {{- range .Values.benchmark.args }}
-            - {{ . }}
+            - {{ . | quote }}
             {{- end }}
             - --chain-id
             - {{ .Values.chain_genesis.metadata.chain_id }}
