--- a/jenkins-x-chaos.yml
+++ b/jenkins-x-chaos.yml
@@ -75,7 +75,7 @@ pipelineConfig:
                   - size=${NODE_SIZE},repo_name=${REPO_NAME},version=pr-${PULL_NUMBER}-${BUILD_NUMBER},resources.cpu=1100m,resources.memory=8Gi,chain_genesis.metadata.timeout_gap=${CHAIN_GENESIS_TIMEOUT_GAP}
               
               - name: watchdog
-                image: mutadev/muta-watchdog:v0.2.0
+                image: mutadev/muta-watchdog:v0.2.0-rc
                 env:
                   - name: WATCH_DURATION
                     value: 1H
