feat(network): add tentacle_metrics feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ members = [
 [features]
 default = []
 random_leader = ["core-consensus/random_leader"]
+tentacle_metrics = ["core-network/tentacle_metrics"]
 
 [[example]]
 name = "muta-chain"
