--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -25,7 +25,7 @@ rand = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 snap = "0.2"
-tentacle = { version = "0.3.0-alpha.5", features = ["molc"]}
+tentacle = { git = "http://github.com/zeroqn/p2p", rev = "492ed8f", features = ["molc"]}
 tokio = { version = "0.2", features = ["macros", "rt-core"]}
 tokio-util = { version = "0.2", features = ["codec"] }
 hostname = "0.3"
@@ -43,6 +43,7 @@ tokio = { version = "0.2", features = ["macros", "rt-core"]}
 default = []
 global_ip_only = []
 diagnostic = []
+tentacle_metrics = ["tentacle/metrics"]
 
 [[test]]
 name = "broadcast"
