--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -17,7 +17,7 @@ futures = { version = "0.3", features = ["async-await"] }
 futures-timer = "3.0"
 hex = "0.4"
 log = "0.4"
-overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "b965dc4b" }
+overlord = { git = "https://github.com/rev-chaos/overlord", rev = "4eb4a122" }
 parking_lot = "0.11"
 prost = "0.6"
 rlp = "0.4"
