--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -9,8 +9,7 @@ repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
 log = "0.4"
-# Turn off default features should turn off gzip feature. For more information,
-# reference log4rs document. gzip feature will be removed from default features as
-# of 1.0.
-log4rs = { version = "0.13", default-features = false }
+# Turn off gzip feature, it hurts performance. For more information, reference
+# log4rs document.
+log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
 json = "0.12"
